base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test_project
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: test_project
  template:
    metadata:
      labels:
        app: test_project
    spec:
      containers:
      - name: test_project
        # 우리가 Tekton으로 빌드한 바로 그 이미지 주소!
        image: registry.ocp.test.com:5000/demo/test_project:latest
        ports:
        - containerPort: 8080
