base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-project-service
  namespace: test-project
spec:
  selector:
    app: test_project      # Deployment의 labels와 똑같아야 합니다!
  ports:
    - protocol: TCP
      port: 80           # 서비스가 사용하는 포트
      targetPort: 8080   # 실제 컨테이너(Pod)가 듣고 있는 포트
  type: ClusterIP
